# SLASCONE-demo-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
Assets/: License-91fad880-90c4-46cb-8d8b-0a12445c6f0e.xml  License-91fad880-90c4-46cb-8d8b-0a12445c6f0e_scam.xml
SLASCONE-demo-client/: CMakeLists.txt  README.md  SLASCONE-demo-clientConfig.cmake
SLASCONE-demo-client/include/SlasconeOpenApiClient/: AnyType.h  ApiClient.h  ApiConfiguration.h  ApiException.h  HttpContent.h  IHttpBody.h  JsonBody.h  ModelBase.h  MultipartFormData.h  Object.h  SlasconeApiClient.h
SLASCONE-demo-client/include/SlasconeOpenApiClient/api/: AdministrationApi.h  CustomerApi.h  CustomerPortalApi.h  DataExchangeApi.h  DataGatheringApi.h  LicenseApi.h  LicenseBundleApi.h  LookUpApi.h  NotificationApi.h  ProductApi.h  ProvisioningApi.h  ResellerApi.h  RolesApi.h  TemplateApi.h
SLASCONE-demo-client/include/SlasconeOpenApiClient/model/: AbstractEmailTemplateDtoOfEmailTemplateDto.h  AbstractEmailTemplateDtoOfUserEmailTemplateDto.h  ActivateClientDto.h  ActivateLicenseResponseErrors.h  ActivationUponLicenseCreation.h  AddHeartbeatDto.h  AddLicenseUserErrorExamples.h  AddOrUpdateLicenseErrors.h  AlertDto.h  AlertMode.h  AnalyticalFieldDto.h  AnalyticalFieldFilterDto.h  AnalyticalFieldTyp.h  AnalyticalFieldValueDto.h  AnalyticalHeartbeatDto.h  AnalyticalHeartbeatResponseErrors.h  BackupStorageDto.h  BackupStorageResponseErrors.h  BackupStorageSasTokenCredentialsError.h  BaseErrorResponse.h  BulkDeleteUserResultDto.h  ClientIdMode.h  ClientType.h  CloseAllSessionsRequestDto.h  CloseSessionErrors.h  CommonErrorResponse.h  ConfigurationDto.h  ConstrainedVariableDto.h  ConstrainedVariableMode.h  ConstrainedVariableSelectionMode.h  ConsumptionBalanceDto.h  ConsumptionBalanceMode.h  ConsumptionDto.h  ConsumptionHeartbeatDto.h  ConsumptionHeartbeatLazyLoadDto.h  ConsumptionHeartbeatResponseErrors.h  ConsumptionHeartbeatValueDto.h  ConsumptionResetPeriod.h  ConsumptionRollbackResponseErrors.h  ConsumptionTransactionDto.h  (+152 more)
SLASCONE-demo-client/src/: AnyType.cpp  ApiClient.cpp  ApiConfiguration.cpp  ApiException.cpp  HttpContent.cpp  JsonBody.cpp  ModelBase.cpp  MultipartFormData.cpp  Object.cpp  SlasconeApiClient.cpp
SLASCONE-demo-client/src/api/: AdministrationApi.cpp  CustomerApi.cpp  CustomerPortalApi.cpp  DataExchangeApi.cpp  DataGatheringApi.cpp  LicenseApi.cpp  LicenseBundleApi.cpp  LookUpApi.cpp  NotificationApi.cpp  ProductApi.cpp  ProvisioningApi.cpp  ResellerApi.cpp  RolesApi.cpp  TemplateApi.cpp
SLASCONE-demo-client/src/model/: AbstractEmailTemplateDtoOfEmailTemplateDto.cpp  AbstractEmailTemplateDtoOfUserEmailTemplateDto.cpp  ActivateClientDto.cpp  ActivateLicenseResponseErrors.cpp  ActivationUponLicenseCreation.cpp  AddHeartbeatDto.cpp  AddLicenseUserErrorExamples.cpp  AddOrUpdateLicenseErrors.cpp  AlertDto.cpp  AlertMode.cpp  AnalyticalFieldDto.cpp  AnalyticalFieldFilterDto.cpp  AnalyticalFieldTyp.cpp  AnalyticalFieldValueDto.cpp  AnalyticalHeartbeatDto.cpp  AnalyticalHeartbeatResponseErrors.cpp  BackupStorageDto.cpp  BackupStorageResponseErrors.cpp  BackupStorageSasTokenCredentialsError.cpp  BaseErrorResponse.cpp  BulkDeleteUserResultDto.cpp  ClientIdMode.cpp  ClientType.cpp  CloseAllSessionsRequestDto.cpp  CloseSessionErrors.cpp  CommonErrorResponse.cpp  ConfigurationDto.cpp  ConstrainedVariableDto.cpp  ConstrainedVariableMode.cpp  ConstrainedVariableSelectionMode.cpp  ConsumptionBalanceDto.cpp  ConsumptionBalanceMode.cpp  ConsumptionDto.cpp  ConsumptionHeartbeatDto.cpp  ConsumptionHeartbeatLazyLoadDto.cpp  ConsumptionHeartbeatResponseErrors.cpp  ConsumptionHeartbeatValueDto.cpp  ConsumptionResetPeriod.cpp  ConsumptionRollbackResponseErrors.cpp  ConsumptionTransactionDto.cpp  (+152 more)
SLASCONE-demo-cpp/: CMakeLists.txt  ErrorHandlingHelper.h  Helper.cpp  Helper.h  LicenseXmlHelper.cpp  LicenseXmlHelper.h  SLASCONE-demo-cpp  SLASCONE-demo-cpp.cpp  SLASCONE-demo-cpp.h
SLASCONE-demo-cpp/LicenseXmlValidator/: LicenseXmlValidation.cpp  LicenseXmlValidation.h  LicenseXmlValidator.cpp  LicenseXmlValidator.h
